1.Remove requirement of OpenCV 2.Minor fixes 3.Support RPI4 pwm servo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 project( canbus-tcp-master )
-find_package( OpenCV REQUIRED )
+#find_package( OpenCV REQUIRED )
 #find_package( CUDA REQUIRED )
 
 set(ENV{PKG_CONFIG_PATH} /usr/lib/pkgconfig)
@@ -12,8 +12,8 @@ find_package(Threads REQUIRED)
 
 #add_definitions(-std=c++11)
 
-INCLUDE_DIRECTORIES(/usr/local/opencv4)
-INCLUDE_DIRECTORIES(/usr/local/include/opencv4)
+#INCLUDE_DIRECTORIES(/usr/local/opencv4)
+#INCLUDE_DIRECTORIES(/usr/local/include/opencv4)
 INCLUDE_DIRECTORIES(${LCM_INCLUDE_DIRS})
 
 #LIST(APPEND CUDA_NVCC_FLAGS -std=c++11;-O2)
@@ -28,6 +28,9 @@ add_executable(canbus-master canbus-master.cpp read-line.c socket_can.cpp can_no
 #set(canbus-tcp-master canbus-tcp-master PROPERTY CUDA_STANDARD 11)
 #set(canbus-master canbus-master PROPERTY CUDA_STANDARD 11)
 
-target_link_libraries(canbus-tcp-master ${OpenCV_LIBS} ${LCM_LIBRARIES} Threads::Threads)
-target_link_libraries(canbus-master ${OpenCV_LIBS} ${LCM_LIBRARIES} Threads::Threads)
+#target_link_libraries(canbus-tcp-master ${OpenCV_LIBS} ${LCM_LIBRARIES} Threads::Threads)
+#target_link_libraries(canbus-master ${OpenCV_LIBS} ${LCM_LIBRARIES} Threads::Threads)
+
+target_link_libraries(canbus-tcp-master ${LCM_LIBRARIES} Threads::Threads)
+target_link_libraries(canbus-master ${LCM_LIBRARIES} Threads::Threads)
 
